@startuml

class java.util.Observer {
     void update(Observable o, Object arg);
}
class java.util.Observable {
    void setChanged();
    void notifyObservers();
    void addObserver(java.util.Observer observer);
}
class TemperatureGUI{
    String label;
    Frame TemperatureFrame;
}

class TemperatureModel{
    public double getF();
    public void setF(double temperatureF)
    public double getC()
    public void setC(double temperatureC)
    private double temperatureF;
}

Class TemperatureCanvas{
    private TemperatureGauge _farenheit;
	private static final int width = 20;
	private static final int top = 20;
	private static final int left = 100;
	private static final int right = 250;
	private static final int height = 200;
    public void paint(Graphics g)
}

TemperatureGUI *-- TemperatureModel: model
TemperatureGUI *-- Frame: temperatureFrame

UpListener --up|> ActionListener

CelsiusGUI --up|> TemperatureGUI
FarenheitGUI --up|> TemperatureGUI

GraphGUI --up|> Frame 
 
TemperatureCanvas --up|> Canvas

TemperatureModel --up|> java.util.Observable

SliderGUI .-up|> java.util.Observer
TemperatureGUI .-up|> java.util.Observer
Frame .-up|>  java.util.Observer



@enduml